--- a/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
+++ b/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
@@ -8,11 +8,11 @@
 # 项目配置: 名称、日志目录
 project:
   name: sa-admin
-  log-directory: ${localPath:/home}/logs/smart_admin_v3/${project.name}/${spring.profiles.active}
+  log-directory: ${localPath:/data}/logs/on_the_saddle/${project.name}/${spring.profiles.active}
 
 # 项目端口和url根路径
 server:
-  port: 1024
+  port: 61812
   servlet:
     context-path: /
 
