feat(member): 优化家庭组成员管理功能
- 添加 Anthropics API 配置
- 修复家庭组成员年龄显示问题
- 新增家庭组成员查询条件
- 优化家庭组成员加入逻辑，支持恢复已删除成员
-完善监护人设置相关提示- 更新数据库查询以包含已删除记录
- 修改数据库连接信息

--- a/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
+++ b/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
@@ -1,7 +1,7 @@
 spring:
   # 数据库连接信息
   datasource:
-    url: jdbc:p6spy:mysql://115.120.213.163:65234/on_the_saddle?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    url: jdbc:p6spy:mysql://115.120.213.163:65234/on_the_saddle_new?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: user
     password: user
     driver-class-name: com.p6spy.engine.spy.P6SpyDriver
