文件和请求大小限制    fix(product): 优化产品添加页面动态表单配置加载
-将 dynamicFormConfig 初始化为数组，确保 DynamicFormRenderer 可以正常渲染
- 从 API 响应中提取 fields 数组给 DynamicFormRenderer 使用
- 在重置动态配置时，将 dynamicFormConfig 设置为空数组
- 在所有环境配置文件中添加文件上传配置

--- a/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
+++ b/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
@@ -65,6 +65,13 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
+  # 文件上传配置
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+      enabled: true
+
   # 缓存实现类型
   cache:
     type: redis
