--- a/smart-admin-api-java17-springboot3/sa-base/src/main/resources/prod/sa-base.yaml
+++ b/smart-admin-api-java17-springboot3/sa-base/src/main/resources/prod/sa-base.yaml
@@ -65,6 +65,13 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
 
+  # 文件上传配置
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+      enabled: true
+
   # 缓存实现类型
   cache:
     type: redis
