feat(member): 添加会员小程序支持- 新增会员小程序登录和信息获取功能 - 实现会员信息更新和会籍状态查询接口- 添加家庭组信息获取和用户注册状态检查接口 - 重构拦截器，支持会员和员工两种登录状态 - 更新Swagger配置，添加会员小程序相关接口文档

--- a/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
+++ b/smart-admin-api-java17-springboot3/sa-base/src/main/resources/dev/sa-base.yaml
@@ -106,7 +106,8 @@ springdoc:
   swagger-ui:
     enabled: true # 开关
     doc-expansion: none  #关闭展开
-    tags-sorter: alpha
+    tags-sorter: original   # original=原始顺序(代码顺序), alpha=字母排序
+    operations-sorter: method  # method=按HTTP方法和代码顺序, alpha=字母排序
     server-base-url:
   api-docs:
     enabled: true # 开关
