--- a/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
+++ b/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
@@ -20,3 +20,17 @@ server:
 spring:
   profiles:
     active: '@profiles.active@'
+
+
+wechat:
+  miniapp:
+    # 小程序AppID（必填）
+    app-id: wx3916d4e79759fd78
+    # 小程序AppSecret（必填）
+    app-secret: 845d67857dd5bbb0127215d5e8ec9236
+    # 微信服务器域名（可选，默认为微信官方域名） todo
+    server-domain: https://api.weixin.qq.com
+    # 连接超时时间，单位毫秒（可选，默认5000）
+    connect-timeout: 5000
+    # 读取超时时间，单位毫秒（可选，默认10000）
+    read-timeout: 10000
