--- a/smart-app/project.config.json
+++ b/smart-app/project.config.json
@@ -3,18 +3,19 @@
   "packOptions": {
     "ignore": [
       {
-        "type": "file",
-        "value": ".eslintrc.cjs"
+        "value": ".eslintrc.cjs",
+        "type": "file"
       },
       {
-        "type": "file", 
-        "value": ".prettierrc.cjs"
+        "value": ".prettierrc.cjs",
+        "type": "file"
       },
       {
-        "type": "file",
-        "value": "vite.config.js"
+        "value": "vite.config.js",
+        "type": "file"
       }
-    ]
+    ],
+    "include": []
   },
   "setting": {
     "urlCheck": false,
@@ -52,20 +53,17 @@
     "disableUseStrict": false,
     "minifyWXML": true,
     "showES6CompileOption": false,
-    "useCompilerPlugins": false
+    "useCompilerPlugins": false,
+    "compileWorklet": false,
+    "localPlugins": false,
+    "condition": false,
+    "swc": false,
+    "disableSWC": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
   "appid": "wx3916d4e79759fd78",
   "projectname": "smart-app",
-  "debugOptions": {
-    "hidedInDevtools": []
-  },
-  "scripts": {},
-  "staticServerOptions": {
-    "baseURL": "",
-    "servePath": ""
-  },
   "isGameTourist": false,
   "condition": {
     "search": {
@@ -86,5 +84,7 @@
     "miniprogram": {
       "list": []
     }
-  }
+  },
+  "simulatorPluginLibVersion": {},
+  "editorSetting": {}
 }
