refactor(product): 重构商品管理功能模块
- 更新商品类型描述，将"多人课"改为"小组课"
- 调整商品表格列配置，增加课程分类、价格配置等列
-优化商品详情页面布局和样式- 改进响应处理逻辑，增加日志输出
-调整多人课价格配置组件，改为小组课价格配置

--- a/smart-admin-api-java17-springboot3/sa-admin/pom.xml
+++ b/smart-admin-api-java17-springboot3/sa-admin/pom.xml
@@ -35,6 +35,26 @@
             </exclusions>
         </dependency>
 
+        <!-- 微信支付Java SDK（APIv3） -->
+        <dependency>
+            <groupId>com.github.wechatpay-apiv3</groupId>
+            <artifactId>wechatpay-java</artifactId>
+            <version>0.2.12</version>
+        </dependency>
+
+        <!-- 微信小程序SDK（用于获取用户openid等） -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+
+        <!-- JSON处理库（微信支付回调解析） -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
