--- a/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
+++ b/smart-admin-api-java17-springboot3/sa-admin/src/main/resources/dev/application.yaml
@@ -28,12 +28,44 @@ wechat:
     app-id: wx3916d4e79759fd78
     # 小程序AppSecret（必填）
     app-secret: 845d67857dd5bbb0127215d5e8ec9236
-    # 微信服务器域名（可选，默认为微信官方域名） todo
+    # 微信服务器域名（可选，默认为微信官方域名）
     server-domain: https://api.weixin.qq.com
     # 连接超时时间，单位毫秒（可选，默认5000）
     connect-timeout: 5000
     # 读取超时时间，单位毫秒（可选，默认10000）
     read-timeout: 10000
+  
+  # 微信支付配置（APIv3）
+  pay:
+    # 支付环境：mock（模拟）/ sandbox（沙箱）/ production（生产）
+    environment: mock
+    # 商户号（必填）
+    mch-id: 1234567890
+    # 商户APIv3密钥（必填，32位字符串）
+    api-v3-key: your32characterlongapiv3keyhere
+    # 商户私钥文件路径（必填）
+    private-key-path: classpath:cert/apiclient_key.pem
+    # 商户证书序列号（必填）
+    merchant-serial-number: 1234567890ABCDEF1234567890ABCDEF12345678
+    # 微信支付证书文件路径（可选，自动下载）
+    wechat-pay-cert-path: classpath:cert/wechatpay_cert.pem
+    # 支付回调通知URL（必填）
+    notify-url: https://your-domain.com/api/payment/wechat/notify
+    # 退款回调通知URL（可选）
+    refund-notify-url: https://your-domain.com/api/payment/wechat/refund-notify
+    # 请求超时时间，单位毫秒（可选，默认30000）
+    request-timeout: 30000
+    
+    # Mock模式配置（当environment=mock时生效）
+    mock:
+      # 模拟网络延迟（秒）
+      delay-seconds: 2
+      # 模拟成功率（百分比，0-100）
+      success-rate: 90
+      # 是否自动触发支付回调
+      auto-callback: true
+      # 回调延迟时间（秒）
+      callback-delay: 5
 
 # 硅基流动AI配置
 siliconflow:
